# luckfox_pico_86panel_ui_demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_libmodbus  README.md  README_CN.md  cleanbuild  lv_conf.h  main-ping_demo.c.old  main.c  main.cpp
eez_studio_files/: ping_demo.eez-project  thermostat_app.eez-project
lib/libmodbus_arm/lib/: libmodbus.la
lib/libmodbus_arm/lib/pkgconfig/: libmodbus.pc
lv_drivers/display/: fbdev.c
source/86panel_demo/: ui.c  ui.h  ui_custom.c  ui_custom.h
source/86panel_demo/fonts/: ui_font_HarmonyOS48.c
source/86panel_demo/images/: ui_img_back_png.c  ui_img_connect_png.c  ui_img_discon_png.c  ui_img_icon_eth_off_png.c  ui_img_icon_eth_on_png.c  ui_img_icon_music_close_png.c  ui_img_icon_music_cycle_all_png.c  ui_img_icon_music_cycle_one_png.c  ui_img_icon_music_list_play_png.c  ui_img_icon_music_list_png.c  ui_img_icon_music_next_png.c  ui_img_icon_music_pause_png.c  ui_img_icon_music_play_png.c  ui_img_icon_music_pre_png.c  ui_img_icon_music_shuffle_png.c  ui_img_icon_sound_donw_png.c  ui_img_icon_sound_up_png.c  ui_img_icon_top17_png.c  ui_img_icon_wifi_off_png.c  ui_img_icon_wifi_on_png.c  ui_img_scan_png.c
source/86panel_demo/screens/: ui_ScreenMain.c  ui_ScreenPlayer.c  ui_ScreenWpa.c
source/ping_demo/: ping_handler.c
source/ping_demo/eez_ui/: actions.h  screens.c  screens.h  vars.c  vars.h
source/thermostat_app/: LED.hpp  Regulation.hpp  RelayOutput.hpp  Thermostat.cpp  Thermostat.hpp  thermostat_bridge.cpp
source/thermostat_ui/: thermostat_handler.c
source/thermostat_ui/ui/: actions.h  screens.c  screens.h  vars.c  vars.h
